--- a/RedGreen/RedGreen/RedGreen.csproj
+++ b/RedGreen/RedGreen/RedGreen.csproj
@@ -14,6 +14,9 @@
     <OldToolsVersion>2.0</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
+    <TargetFrameworkVersion>v3.0</TargetFrameworkVersion>
+    <TargetFrameworkSubset>
+    </TargetFrameworkSubset>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,10 +44,6 @@
     <Reference Include="DevExpress.DXCore.Controls.XtraEditors.v6.3, Version=3.0.8.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d" />
     <Reference Include="DevExpress.DXCore.Controls.XtraTreeList.v6.3, Version=3.0.8.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d" />
     <Reference Include="Extensibility, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <Reference Include="Gallio, Version=3.0.4.481, Culture=neutral, PublicKeyToken=eb9cfa67ee6ab36e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\3rdParty\Gallio\Gallio.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.VisualStudio.OLE.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.VisualStudio.Shell, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -57,6 +56,9 @@
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
+    <Reference Include="System.ServiceModel, Version=3.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -72,7 +74,6 @@
   <ItemGroup>
     <Compile Include="AllTestsCompleteEventArgs.cs" />
     <Compile Include="FailureData.cs" />
-    <Compile Include="GallioLogExtension.cs" />
     <Compile Include="DxCoreUtils.cs" />
     <Compile Include="GallioParserUtils.cs" />
     <Compile Include="GallioRunner.cs" />
@@ -87,9 +88,11 @@
       <DependentUpon>PlugIn1.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResultParser.cs" />
+    <Compile Include="ResultParserFactory.cs" />
+    <Compile Include="SummaryResult.cs" />
     <Compile Include="TestCompleteEventArgs.cs" />
     <Compile Include="TestInfo.cs" />
-    <Compile Include="TestProvider.cs" />
     <Compile Include="TestResult.cs" />
     <Compile Include="TestStatus.cs" />
     <Compile Include="XunitGallioParser.cs" />
