--- a/trunk/RedGreen/RedGreen/RedGreen.csproj
+++ b/trunk/RedGreen/RedGreen/RedGreen.csproj
@@ -72,6 +72,7 @@
     <Reference Include="VSLangProj, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdHocRunner.cs" />
     <Compile Include="AllTestsCompleteEventArgs.cs" />
     <Compile Include="FailureData.cs" />
     <Compile Include="DxCoreUtils.cs" />
