--- a/trunk/Refactor_Resolve/Refactor_Resolve/Refactor_Resolve.vbproj
+++ b/trunk/Refactor_Resolve/Refactor_Resolve/Refactor_Resolve.vbproj
@@ -50,7 +50,7 @@
     </TargetFrameworkSubset>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>c:\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\PlugIns\</OutputPath>
+    <OutputPath>C:\Users\hoefkko\Documents\DevExpress\IDE Tools\Community\PlugIns\</OutputPath>
     <DocumentationFile>Refactor_Resolve.xml</DocumentationFile>
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile>
@@ -88,45 +88,16 @@
     <DebugType>none</DebugType>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.CodeRush.Common">
-      <Name>DevExpress.CodeRush.Common</Name>
-      <HintPath>..\..\..\..\..\..\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\DevExpress.CodeRush.Common.dll</HintPath>
-      <AssemblyFolderKey>hklm\dxcore</AssemblyFolderKey>
-    </Reference>
-    <Reference Include="DevExpress.CodeRush.Core">
-      <Name>DevExpress.CodeRush.Core</Name>
-      <HintPath>..\..\..\..\..\..\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\DevExpress.CodeRush.Core.dll</HintPath>
-      <AssemblyFolderKey>hklm\dxcore</AssemblyFolderKey>
-    </Reference>
-    <Reference Include="DevExpress.CodeRush.Interop">
-      <Name>DevExpress.CodeRush.Interop</Name>
-      <HintPath>..\..\..\..\..\..\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\DevExpress.CodeRush.Interop.dll</HintPath>
-      <AssemblyFolderKey>hklm\dxcore</AssemblyFolderKey>
-    </Reference>
-    <Reference Include="DevExpress.CodeRush.PlugInCore">
-      <Name>DevExpress.CodeRush.PlugInCore</Name>
-      <HintPath>..\..\..\..\..\..\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\DevExpress.CodeRush.PlugInCore.dll</HintPath>
-      <AssemblyFolderKey>hklm\dxcore</AssemblyFolderKey>
-    </Reference>
-    <Reference Include="DevExpress.CodeRush.StructuralParser">
-      <Name>DevExpress.CodeRush.StructuralParser</Name>
-      <HintPath>..\..\..\..\..\..\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\DevExpress.CodeRush.StructuralParser.dll</HintPath>
-      <AssemblyFolderKey>hklm\dxcore</AssemblyFolderKey>
-    </Reference>
-    <Reference Include="DevExpress.CodeRush.UserControls">
-      <Name>DevExpress.CodeRush.UserControls</Name>
-      <HintPath>..\..\..\..\..\..\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\DevExpress.CodeRush.UserControls.dll</HintPath>
-      <AssemblyFolderKey>hklm\dxcore</AssemblyFolderKey>
-    </Reference>
-    <Reference Include="DevExpress.CodeRush.VSCore">
-      <Name>DevExpress.CodeRush.VSCore</Name>
-      <HintPath>..\..\..\..\..\..\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\DevExpress.CodeRush.VSCore.dll</HintPath>
-      <AssemblyFolderKey>hklm\dxcore</AssemblyFolderKey>
-    </Reference>
-    <Reference Include="DevExpress.Refactor.Core">
-      <Name>DevExpress.Refactor.Core</Name>
-      <HintPath>..\..\..\..\..\..\Program Files\Developer Express Inc\Refactor! for Visual Studio .NET\Bin\DevExpress.Refactor.Core.dll</HintPath>
-      <AssemblyFolderKey>hklm\refactor!</AssemblyFolderKey>
+    <Reference Include="DevExpress.CodeRush.Common, Version=9.1.3.9114, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.CodeRush.Core, Version=9.1.3.9114, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.CodeRush.Interop, Version=9.1.3.9114, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.CodeRush.PlugInCore, Version=9.1.3.9114, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.CodeRush.StructuralParser, Version=9.1.3.9114, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.CodeRush.UserControls, Version=9.1.3.9114, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.CodeRush.VSCore, Version=9.1.3.9114, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Refactor.Core, Version=9.1.3.9114, Culture=neutral, PublicKeyToken=3f8e338797a7a380, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files\DevExpress 2009.1\IDETools\System\RefactorCommonLib\BIN\DevExpress.Refactor.Core.dll</HintPath>
     </Reference>
     <Reference Include="EnvDTE">
       <Name>EnvDTE</Name>
